fixed the add review getting cut off

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -62,9 +62,12 @@
 
   .content {
     display: flex;
-    margin: 32px 0 0 0;
+    /*margin: 32px 0 0 0;
     padding: 0;
-    max-width: 100%;
+    max-width: 100%;*/
+    margin: 32px auto;
+    padding: 0 16px;
+    max-width: 960px;
     flex-direction: column;
     align-items: center;
   }
