--- a/frontend/src/app/views/home/home.component.css
+++ b/frontend/src/app/views/home/home.component.css
@@ -4,6 +4,9 @@ body {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+    padding: 0;
+    margin: 0;
+    border: 0;
   }
 
   .img-responsive{
@@ -13,4 +16,7 @@ body {
     max-width: max-content;
     height: auto;
     max-height: max-content;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
   }
